Change to save locations

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
     }
    ],
    "source": [
-    "filename =\"C:/Users/markb/OneDrive/Desktop/Data Analytics/Machine Learning/Test/lin_reg.pkl\"\n",
+    "filename =\"Models/lin_reg.pkl\"\n",
     "joblib.dump(lin_model, filename)\n",
     "\n",
     "value = float(input(\"Input a value for the wind speed in m/s:\"))\n",
